# fusionflow

./: .gitignore  DISTRIBUTE_WINDOWS_EXE.md  DOCUMENTATION_COMPLETE.md  FINAL_SUMMARY.md  GUIDES_CREATED.md  HOW_TO_USE_FUSIONFLOW.md  LICENSE  PUBLISH_VS_CODE_EXTENSION.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  TEMPORAL_SPEC.md  WHAT_WAS_DELIVERED.md  WHY_FUSIONFLOW_IS_UNIQUE.md  cli_wrapper.py  example.ff  pyproject.toml
AI-ETL/naeop-platform/: .gitignore  README.md  pyproject.toml  requirements.txt
AI-ETL/naeop-platform/data/telemetry/: llm_decisions.jsonl  pipeline_runs.csv
AI-ETL/naeop-platform/docs/: architecture.md  operational_hardening.md
AI-ETL/naeop-platform/models/: failure_model.joblib  failure_model_advanced.joblib
AI-ETL/naeop-platform/src/: __init__.py  main.py
AI-ETL/naeop-platform/src/agents/: __init__.py  contracts.py  llm_agent.py
AI-ETL/naeop-platform/src/config/: settings.py
AI-ETL/naeop-platform/src/core/: logger.py  utils.py
AI-ETL/naeop-platform/src/ml/: __init__.py  advanced_failure_model.py  failure_model.py  feature_store.py  train_failure_model.py
AI-ETL/naeop-platform/src/monitoring/: alert_backends.py  alert_contracts.py  alerts.py  llm_telemetry.py  metrics.py  telemetry_schema.py
AI-ETL/naeop-platform/src/orchestrator/: dag_builder.py  decision_engine.py  executor.py  remediation.py  retry_policy.py  scheduler.py
AI-ETL/naeop-platform/src/tests/: test_agents.py  test_decision_engine.py  test_failure_model.py  test_operational_hardening.py  test_remediation_flow.py  test_sample.py
assets/: create_logo.py
(+80 files in other folders)
