[tool.poetry]
name = "naeop-platform"
version = "0.1.0"
description = "NeuroAdaptive ETL Orchestration Platform"
authors = ["Dinesh0401 <your_email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here
# Example: pandas = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"